--- a/docs/content/_snippets/upgrade-single-key-risk.mdx
+++ b/docs/content/_snippets/upgrade-single-key-risk.mdx
@@ -1,3 +1,3 @@
-- The entity owning that key might make changes that are in their own interests but not the interests of the broader community.
-- Upgrades might happen without enough time for package users to consult on the change or stop using the package if they disagree.
-- The key might get lost.
+- **Conflicting Interests:** The entity controlling the key may make changes that benefit themselves but are not in the best interests of the broader community.
+- **Lack of Consultation:** Upgrades might be executed without sufficient time for package users to review the changes or decide whether to continue using the package if they disagree with the updates.
+- **Key Loss:** If the key is lost, it could permanently prevent any future upgrades, leaving the package in a potentially vulnerable or outdated state.
